--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,17 +13,23 @@
   <div id="top" class="page">
     <header class="main-title">
       <h1 class="site-name">
-        <a href="#top">u</a><span>m</span><span>b</span><span>a</span><span>u</span>
+        <a href="#top">u</a><!--
+          --><span class="letter">m</span><!--
+          --><span class="letter">b</span><!--
+          --><span class="letter">a</span><!--
+          --><span class="letter">u</span>
       </h1>
 
-      <p class="tag">
-        umbau is a school <br>of
-        <span
-          data-words="['architecture', 'thought', 'transformation']"
-        >architecture</span>.
-        <span class="sr-only"><br>umbau is a school of thought.</span>
-        <span class="sr-only"><br>umbau is a school of transformation.</span>
-      </p>
+      <div class="tag-wrap">
+        <p class="tag">
+          umbau is a school <br>of
+          <span
+            data-words="['architecture', 'thought', 'transformation']"
+          >architecture</span>.
+          <span class="sr-only"><br>umbau is a school of thought.</span>
+          <span class="sr-only"><br>umbau is a school of transformation.</span>
+        </p>
+      </div>
     </header>
     
     <a class="menu-trigger" href="#menu">
