Add person grid.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,12 @@
         <p class="tag">
           umbau is a school <br>of
           <span
-            data-words="['architecture', 'thought', 'transformation']"
+            data-words="['architecture', 'thought', 'sustainability', 'design', 'transformation']"
           >architecture</span>.
+
           <span class="sr-only"><br>umbau is a school of thought.</span>
+          <span class="sr-only"><br>umbau is a school of sustainability.</span>
+          <span class="sr-only"><br>umbau is a school of design.</span>
           <span class="sr-only"><br>umbau is a school of transformation.</span>
         </p>
       </div>
