--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
  */
 :root {
   --gray-light: rgb(242, 242, 242);
+  --gray: rgb(175, 175, 175);
   --red: rgb(236, 51, 35);
 
   --outside-border-top: 3.5vw;
@@ -40,6 +41,12 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+  outline: none;
+}
 
 /*
  * UTILS
@@ -61,12 +68,12 @@ body {
  * HEADER
  */
 .main-title {
-  
   border-color: var(--gray-light);
   border-style: solid;
   border-width: var(--outside-border-top) var(--outside-border-width) 0;
   box-sizing: border-box;
   height: 120vh;
+  pointer-events: none;
   z-index: 50;
 }
 
@@ -87,7 +94,9 @@ body {
 
 .site-name a {
   color: inherit;
+  pointer-events: auto;
   text-decoration: none;
+  transition: color .2s;
 }
 
 .site-name a:focus,
@@ -120,7 +129,6 @@ body {
   line-height: 1;
   margin-left: var(--tag-push);
   max-width: 12em;
-  pointer-events: auto;
   z-index: 60;
 }
 
@@ -213,15 +221,30 @@ body {
 /*
  * MAIN
  */
-
 main {
+  box-sizing: border-box;
   border-right: var(--outside-border-width) solid var(--gray-light);
-  font-size: 20px;
+  font-size: 18px;
   margin-left: auto;
-  padding: var(--outside-border-width);
+  padding: calc(var(--outside-border-width) / 2);
   padding-left: 20vw;
-  width: 48%;
+  width: 100%;
 }
+
+@media (min-width: 750px) {
+  main {
+    font-size: 20px;
+    padding: var(--outside-border-width);
+    width: 83%;
+  }
+}
+
+@media (min-width: 1000px) {
+  main {
+    width: 70%;
+  }
+}
+
 
 main h2 {
   font-size: 42px;
@@ -232,6 +255,125 @@ main h2 {
 main p {
   line-height: 1.5;
   margin: 0 0 1.5em;
+  max-width: 44em;
 }
 
+@media (max-width: 999px) {
+  main p {
+    -webkit-hyphens: auto;
+    -webkit-hyphenate-limit-before: 3;
+    -webkit-hyphenate-limit-after: 3;
+    -webkit-hyphenate-limit-chars: 6 3 3;
+    -webkit-hyphenate-limit-lines: 2;
+    -webkit-hyphenate-limit-last: always;
+    -webkit-hyphenate-limit-zone: 8%;
+
+    -moz-hyphens: auto;
+    -moz-hyphenate-limit-chars: 6 3 3;
+    -moz-hyphenate-limit-lines: 2;
+    -moz-hyphenate-limit-last: always;
+    -moz-hyphenate-limit-zone: 8%;
+
+    -ms-hyphens: auto;
+    -ms-hyphenate-limit-chars: 6 3 3;
+    -ms-hyphenate-limit-lines: 2;
+    -ms-hyphenate-limit-last: always;
+    -ms-hyphenate-limit-zone: 8%;
+
+    hyphens: auto;
+    hyphenate-limit-chars: 6 3 3;
+    hyphenate-limit-lines: 2;
+    hyphenate-limit-last: always;
+    hyphenate-limit-zone: 8%;
+  }
+}
+
+main a {
+  color: black;
+  text-decoration: underline;
+  transition: color .2s;
+}
+
+main a:hover {
+  color: var(--red);
+}
+
+
+/*
+ * HEADER
+ */
+.person-grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -15px;
+}
+
+.person-grid .person-card {
+  margin: 0 15px 45px;
+  width: calc(33.3333% - 30px);
+}
+
+.person-card {
+  border-bottom: 2px solid var(--gray-light);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  justify-content: flex-start;
+  padding: 0 0 10px;
+  text-decoration: none;
+  transition: border .2s;
+}
+
+.person-card:hover {
+  border-bottom-color: black;
+}
+
+.person-card:hover .person-card__img {
+  filter: blur(0);
+}
+
+.person-card__name,
+.person-card__website {
+  transition: color .2s;
+}
+
+a.person-card:hover .person-card__name,
+a.person-card:hover .person-card__website {
+  color: var(--red);
+}
+
+.person-card__img-wrap {
+  margin: 0 0 20px;
+  overflow: hidden;
+}
+
+.person-card__img {
+  filter: blur(5px);
+  transition: filter .5s;
+}
+
+.person-card__name {
+  font-size: inherit;
+  line-height: inherit;
+  margin: 0 0 10px;
+}
+
+.person-card__title {
+  color: var(--gray);
+  font-size: 16px;
+  margin: 0 0 10px;
+}
+
+.person-card__bio {
+  color: black;
+  font-size: 16px;
+  margin: 0 0 30px;
+}
+
+.person-card__website {
+  color: var(--gray);
+  font-size: 14px;
+  margin-top: auto;
+}
 
