--- a/css/main.css
+++ b/css/main.css
@@ -327,6 +327,22 @@ main a:hover {
   color: var(--red);
 }
 
+main .btn {
+  background-color: var(--red);
+  color: white;
+  display: inline-block;
+  font-size: 20px;
+  margin: 0 0 20px;
+  padding: 10px 25px;
+  text-decoration: none;
+  transition: background .2s, color .2s;
+}
+
+main .btn:hover {
+  background-color: black;
+  color: white;
+}
+
 .img--full {
   max-width: none;
   width: calc(100% + var(--outside-border-width) * 1.5);
