--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ img {
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 60;
+  z-index: 200;
 }
 
 .tag {
@@ -162,7 +162,7 @@ img {
   position: fixed;
   top: var(--outside-border-top);
   transform: translateZ(0);
-  z-index: 110;
+  z-index: 1010;
 }
 
 .menu-trigger::before,
@@ -197,7 +197,7 @@ img {
   top: 0;
   transform: translateZ(0);
   width: 100%;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .has-main-menu-showing .main-menu {
@@ -263,13 +263,31 @@ main {
 main h1 {
   font-size: 50px;
   line-height: 60px;
-  margin: 3em 0 30px;
+  margin: 200px 0 30px;
+}
+
+@media (min-width: 750px) {
+  main h1 {
+    margin-top: 300px;
+  }
+}
+
+@media (min-width: 1000px) {
+  main h1 {
+    margin-top: 400px;
+  }
 }
 
 main h2 {
   font-size: 30px;
   line-height: 40px;
-  margin: 6em 0 30px;
+  margin: 100px 0 30px;
+}
+
+@media (min-width: 1250px) {
+  main h2 {
+    margin-top: 200px;
+  }
 }
 
 main h1 + h2,
@@ -315,7 +333,7 @@ main p {
 
 main hr {
   border: none;
-  margin: var(--outside-border-width) 0;
+  margin: 0;
 }
 
 main a {
