--- a/css/main.css
+++ b/css/main.css
@@ -351,8 +351,9 @@ main .btn {
   color: white;
   display: inline-block;
   font-size: 20px;
-  margin: 0 0 20px;
+  margin: 10px 0 20px;
   padding: 10px 25px;
+  text-align: center;
   text-decoration: none;
   transition: background .2s, color .2s;
 }
