--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,10 @@
 
     <nav id="menu" class="main-menu">
       <ul>
-        <li><a href="#">Menu One</a></li>
-        <li><a href="#">Menu Two</a></li>
-        <li><a href="#">Menu Three</a></li>
-        <li><a href="#">Menu Four</a></li>
+        <li><a href="#">Healing Architecture</a></li>
+        <li><a href="#">Studios</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </div>
