--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,10 @@
 
     <nav id="menu" class="main-menu">
       <ul>
-        <li><a href="#">Healing Architecture</a></li>
-        <li><a href="#">Studios</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="healing-architecture">Healing Architecture</a></li>
+        <li><a href="studios">Studios</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="contact">Contact</a></li>
       </ul>
     </nav>
   </div>
