--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
         <p class="tag">
           umbau is a school <br>of
           <span
-            data-words="['architecture', 'thought', 'sustainability', 'design', 'transformation']"
-          >architecture</span>.
+            data-words='["architecture.", "thought.", "sustainability.", "design.", "transformation."]'
+          >architecture.</span>
 
           <span class="sr-only"><br>umbau is a school of thought.</span>
           <span class="sr-only"><br>umbau is a school of sustainability.</span>
