Improve anchor nav

--- a/css/main.css
+++ b/css/main.css
@@ -153,14 +153,14 @@ img {
  * NAV
  */
 .menu-trigger {
-  --negative-offset: calc(var(--outside-border-width) * -1);
+  --negative-offset: calc(var(--outside-border-width) * -1 - 15px);
 
   left: 100%;
   margin-left: var(--negative-offset);
   margin-top: -8px;
   padding: 8px 0;
   position: fixed;
-  top: var(--outside-border-top);
+  top: 20px;
   transform: translateZ(0);
   z-index: 1010;
 }
@@ -169,30 +169,84 @@ img {
 .menu-trigger::after {
   --trigger-width: calc(var(--outside-border-width) * 2 / 3);
 
-  border-top: 10px solid var(--red);
+  border-top: 5px solid var(--red);
   content: "";
   display: block;
   height: 0;
   transition: transform .2s;
-  width: var(--trigger-width);
+  width: 32px;
 }
 
 .menu-trigger::before {
-  margin-bottom: 8px;
+  margin-bottom: 6px;
 }
 
 .has-main-menu-showing .menu-trigger::before {
-  transform: translate3d(0, 9px, 0) rotate(-225deg);
+  transform: translate(0, 6px) rotate(-225deg);
 }
 .has-main-menu-showing .menu-trigger::after {
-  transform: translate3d(0, -9px, 0) rotate(-135deg);
+  transform: translate(0, -6px) rotate(-135deg);
+}
+
+@media (min-width: 750px) {
+  .menu-trigger {
+    --negative-offset: calc(var(--outside-border-width) * -1 - 25px);
+
+    margin-left: var(--negative-offset);
+    top: var(--outside-border-top);
+  }
+
+  .menu-trigger::before,
+  .menu-trigger::after {
+    border-top-width: 7px;
+    width: 50px;
+  }
+
+  .menu-trigger::before {
+    margin-bottom: 8px;
+  }
+
+  .has-main-menu-showing .menu-trigger::before {
+    transform: translate3d(0, 8px, 0) rotate(-225deg);
+  }
+  .has-main-menu-showing .menu-trigger::after {
+    transform: translate3d(0, -8px, 0) rotate(-135deg);
+  }
+}
+
+@media (min-width: 1000px) {
+  .menu-trigger {
+    --negative-offset: calc(var(--outside-border-width) * -1);
+
+    margin-left: var(--negative-offset);
+  }
+
+  .menu-trigger::before,
+  .menu-trigger::after {
+    border-top-width: 10px;
+    width: var(--trigger-width);
+  }
+
+  .menu-trigger::before {
+    margin-bottom: 8px;
+  }
+
+  .has-main-menu-showing .menu-trigger::before {
+    transform: translate3d(0, 9px, 0) rotate(-225deg);
+  }
+
+  .has-main-menu-showing .menu-trigger::after {
+    transform: translate3d(0, -9px, 0) rotate(-135deg);
+  }
 }
 
 .main-menu {
   background-color: black;
   box-sizing: border-box;
   display: none;
-  padding: var(--outside-border-top) var(--outside-border-width);
+  height: 100vh;
+  padding: 38px 60px;
+  padding-left: var(--outside-border-width);
   position: fixed;
   top: 0;
   transform: translateZ(0);
@@ -206,13 +260,8 @@ img {
 
 .main-menu ul {
   list-style: none;
-  margin: -8px 18px;
+  margin: 0;
   padding: 0;
-  text-align: right;
-}
-
-.main-menu li {
-  display: inline-block;
 }
 
 .main-menu a {
@@ -221,7 +270,7 @@ img {
   font-size: 18px;
   font-weight: bold;
   line-height: 24px;
-  margin: 0 1px;
+  margin: 0 0 0 -15px;
   padding: 10px 15px;
   text-decoration: none;
 }
@@ -230,6 +279,33 @@ img {
 .main-menu a:hover {
   background-color: rgba(255, 255, 255, 0.2);
   outline: none;
+}
+
+@media (min-width: 750px) {
+  .main-menu {
+    height: auto;
+    padding: var(--outside-border-top) var(--outside-border-width);
+    padding-right: calc(var(--outside-border-width) + 25px);
+  }
+
+  .main-menu ul {
+    margin: -8px 18px;
+    text-align: right;
+  }
+
+  .main-menu li {
+    display: inline-block;
+  }
+
+  .main-menu a {
+    margin: 0 1px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .main-menu {
+    padding-right: var(--outside-border-width);
+  }
 }
 
 
@@ -263,18 +339,19 @@ main {
 main h1 {
   font-size: 50px;
   line-height: 60px;
-  margin: 200px 0 30px;
+  margin: 100px 0 30px;
+  padding-top: 100px;
 }
 
 @media (min-width: 750px) {
   main h1 {
-    margin-top: 300px;
+    margin-top: 200px;
   }
 }
 
 @media (min-width: 1000px) {
   main h1 {
-    margin-top: 400px;
+    margin-top: 300px;
   }
 }
 
