--- a/css/main.css
+++ b/css/main.css
@@ -527,7 +527,8 @@ main .btn:hover {
   border-bottom-color: black;
 }
 
-.person-card:hover .person-card__img {
+.person-card:hover .person-card__img,
+.person-card__img-wrap.in-view .person-card__img {
   filter: blur(0);
   transform: scale(1);
 }
