--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,16 @@
       {{ content }}
     </main>
 
+    <div class="flagstripes">
+      <div class="flagstripe"></div>
+      <div class="flagstripe"></div>
+      <div class="flagstripe"></div>
+      <div class="flagstripe"></div>
+      <div class="flagstripe"></div>
+      <div class="flagstripe"></div>
+      <div class="flagstripe"></div>
+    </div>
+
     <nav id="menu" class="main-menu">
       <ul>
         <li><a href="#healing-architecture">Healing Architecture</a></li>
