--- a/css/main.css
+++ b/css/main.css
@@ -484,6 +484,67 @@ main .btn:hover {
   right: 0;
 }
 
+/*
+ * STUDIO flags
+ */
+.studios + h1 {
+  margin-top: 0;
+}
+
+.studio {
+  box-sizing: border-box;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 100px;
+  padding-top: 40px;
+}
+
+.flagstripes {
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  transition: opacity .2s ease-in;
+  width: var(--outside-border-width);
+}
+
+@media (min-width: 750px) {
+  .flagstripes {
+    width: 18%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .flagstripes {
+    width: 25%;
+  }
+}
+
+.flagstripes.in-view {
+  opacity: 1;
+  transition-timing-function: ease-out;
+}
+
+.flagstripe {
+  background-color: var(--red);
+  height: calc(100% / 3);
+  position: absolute;
+  width: 100%;
+}
+
+.flagstripe:nth-child(1) { top: 0; }
+.flagstripe:nth-child(2) { top: calc(100% / 3 * 2); }
+.flagstripe:nth-child(3) { top: 100%; }
+.flagstripe:nth-child(4) { top: 100%; }
+.flagstripe:nth-child(5) { top: 100%; }
+.flagstripe:nth-child(6) { top: 100%; }
+.flagstripe:nth-child(7) { top: 100%; }
+
+
 
 /*
  * STUDENT GRID
