--- a/css/main.css
+++ b/css/main.css
@@ -513,6 +513,7 @@ main .btn:hover {
   pointer-events: none;
   position: fixed;
   top: 0;
+  transform: translateZ(0);
   width: var(--outside-border-width);
 }
 
@@ -533,14 +534,15 @@ main .btn:hover {
   height: calc(100% / 3);
   opacity: 0;
   position: absolute;
-  transition: opacity .2s ease-in, width .2s ease-in;
-  width: 0;
+  transform: translate3d(-100%, 0, 0);
+  transition: opacity .2s ease-in, transform .2s ease-in;
+  width: 100%;
 }
 
 .flagstripes.in-view .flagstripe {
   opacity: 1;
+  transform: translate3d(0, 0, 0);
   transition-timing-function: ease-out;
-  width: 100%;
 }
 
 .flagstripe:nth-child(1) { bottom: 0; transition-delay: 0s; }
