--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  <meta name=“google-site-verification” content=“8pwxQTWHje2GKaMyDQtk5NyWW7H_kP6RnW3LuyxyBKM” />
 </head>
 <body>
   <div id="top" class="page">
