--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
       <div class="tag-wrap">
         <p class="tag">
-          umbau is a school <br>of
+          umbau is a school <br>for
           <span
             data-words='["architecture.", "thought.", "sustainability.", "design.", "transformation."]'
           >architecture.</span>
