--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
 
     <nav id="menu" class="main-menu">
       <ul>
-        <li><a href="#healing-architecture">Healing Architecture</a></li>
+        <li><a href="#healing-architecture">Healing</a></li>
         <li><a href="#studios">Studios</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
