--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,8 @@
       <ul>
         <li><a href="#healing-architecture--education">Healing</a></li>
         <li><a href="#studios">Studios</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about">About</a></li> 
+        <li><a href="#support-us">Support</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
