--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
         <li><a href="#healing-architecture--education">Healing</a></li>
         <li><a href="#studios">Studios</a></li>
         <li><a href="#about">About</a></li> 
-        <li><a href="#support-us">Support</a></li>
+        <li><a href="#support-us">Donate</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
