--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@
 
     <nav id="menu" class="main-menu">
       <ul>
+        <li><a href="#world-premier">World Premier</a></li>
         <li><a href="#healing-architecture--education">Healing</a></li>
         <li><a href="#studios">Studios</a></li>
         <li><a href="#about">About</a></li> 
